Fixing copy button breaking on mobile

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ ul {
 
   padding-inline: 4rem;
 
-  width: 36rem;
+  width: min(36rem, 100%);
   height: 6.4rem;
 
   border: none;
